--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,6 +1,7 @@
 ﻿FROM microsoft/dotnet:nanoserver
 RUN mkdir /app
 WORKDIR /app
-COPY . /app
+COPY worker.csproj /app/
 RUN dotnet restore
+COPY . /app
 ENTRYPOINT ["dotnet", "run"]
