--- a/rng/rng.csproj
+++ b/rng/rng.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <ThreadPoolMaxThreads>1</ThreadPoolMaxThreads>
   </PropertyGroup>
 
   <ItemGroup>
