--- a/stack.yml
+++ b/stack.yml
@@ -2,21 +2,21 @@ version: "3.2"
 
 services:
   rng:
-    image: user/dc_rng:1.0
+    image: training/dc_rng:1.0
     networks:
       - dockercoins
     deploy:
       endpoint_mode: dnsrr
       
   hasher:
-    image: user/dc_hasher:1.0
+    image: training/dc_hasher:1.0
     networks:
       - dockercoins
     deploy:
       endpoint_mode: dnsrr
       
   webui:
-    image: user/dc_webui:1.0
+    image: training/dc_webui:1.0
     networks:
       - dockercoins
     ports:
@@ -34,7 +34,7 @@ services:
       endpoint_mode: dnsrr
       
   worker:
-    image: user/dc_worker:1.0
+    image: training/dc_worker:1.0
     networks:
       - dockercoins
     deploy:
