--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,33 +2,33 @@ version: "3.1"
 
 services:
   rng:
-    image: training/dc_rng:1.0
+    image: training/dc_rng:ws19
     networks:
     - nat
     ports:
     - "8001:80"
 
   hasher:
-    image: training/dc_hasher:1.0
+    image: training/dc_hasher:ws19
     networks:
     - nat
     ports:
     - "8002:80"
 
   webui:
-    image: training/dc_webui:1.0
+    image: training/dc_webui:ws19
     networks:
     - nat
     ports:
     - "8000:80"
 
   redis:
-    image: training/dc_redis:1.0
+    image: training/dc_redis:ws19
     networks:
     - nat
 
   worker:
-    image: training/dc_worker:1.0
+    image: training/dc_worker:ws19
     networks:
     - nat
 
